--- a/Java/nbproject/project.properties
+++ b/Java/nbproject/project.properties
@@ -29,7 +29,9 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.gson-2.8.2.jar=C:\\Users\\Paula\\Downloads\\Gson\\gson-2.8.2.jar
+file.reference.gson-2.8.2.jar-1=C:\\Users\\yane0\\Downloads\\jar_files (2)\\gson-2.8.2.jar
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\Paula\\Downloads\\conector\\mysql-connector-java-8.0.29.jar
+file.reference.mysql-connector-java-8.0.29.jar-1=C:\\Users\\yane0\\Downloads\\jar_files (3)\\mysql-connector-java-8.0.29.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,7 +42,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.gson-2.8.2.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.29.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
